manifests/platform/kube-prometheus-stack/app/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-b8m
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "prometheus.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-b8m
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "alertmanager.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
